# Gaussian_Surface_Reconstruction

./: .gitattributes  .gitignore  .gitmodules  Comparison.blend  Comparison_walle.blend  Compute_metrics.bat  Compute_metrics.sh  Readme.md  comparing_dataset_sizes.txt  render.blend
Meshes/FISH/MiLo/: mesh_learnable_sdf.ply  point_cloud.ply
Meshes/TRUCK/MiLo/: mesh_learnable_sdf.ply  milo_lowres.ply
Meshes/TRUCK/milo/: milo_default.ply  milo_verylowres.ply  point_cloud.ply
Meshes/TRUCK/sugar/: point_cloud.ply
Meshes/TRUCK/triangle/: triangle_soup.off
Meshes/WALLE/milo/: milo_default.ply  milo_verylowres.ply  point_cloud.ply
Meshes/WALLE/original/source/: walle with textures.glb
Meshes/WALLE/triangle/: test.off  triangle_tsdf.ply
Meshes/WALLE/triangle_2/: mesh.ply
Meshes/triangle/: fuse_post.ply  test_game.off
Meshes/triangle_2/: mesh.ply  mesh_segmented.ply
Metrics/Truck/milo/milo_default_metrics/: metrics.txt
Metrics/Truck/milo/milo_lowres_metrics/: metrics.txt
Metrics/Truck/milo/milo_verylowres_metrics/: metrics.txt
Metrics/Truck/sugar/sugar_metrics/: metrics.txt
Metrics/Truck/triangle/fuse_post_metrics/: metrics.txt
Metrics/Truck/triangle/triangle_tsdf_metrics/: metrics.txt
Metrics/Truck/triangle_2/mesh_segmented_metrics/: metrics.txt
Metrics/WALLE/milo/milo_default_metrics/: metrics.txt
Metrics/WALLE/milo/milo_verylowres_metrics/: metrics.txt
Metrics/WALLE/sugar/sugar_metrics/: metrics.txt
Metrics/WALLE/triangle/triangle_tsdf_metrics/: metrics.txt
Metrics/Walle/milo/milo_default_metrics/: metrics.txt
Metrics/Walle/milo/milo_verylowres_metrics/: metrics.txt
Metrics/Walle/sugar/sugar_metrics/: metrics.txt
Metrics/Walle/triangle/fuse_post_metrics/: metrics.txt
data/colmap-lego/sparse/0/: frames.txt  points3D.txt  project.ini
data/colmap-lego/undistorted/sparse/0/: points3D.ply
data/colmap_lego_small/sparse/0/: cameras.txt  images.txt
data/fish/distorted/: database.db
data/fish/distorted/sparse/0/: project.ini
data/fish/sparse_txt/: cameras.txt  frames.txt  images.txt  points3D.txt
data/fish/stereo/: fusion.cfg  patch-match.cfg
data/lego (original)/: transforms_test.json  transforms_train.json  transforms_val.json
data/lego_colmap_small/sparse/0_pruned_txt/: cameras.txt  images.txt  points3D.txt
data/lego_colmap_small/sparse/0_txt/: frames.txt  points3D.txt
data/walle_blender_colmap/sparse/0/: cameras.txt  images.txt  points3D.txt
home_made_data/distorted/sparse/0/: project.ini
home_made_data/sparse/0/: cameras.txt  frames.txt  points3D.ply  points3D.txt
home_made_data/stereo/: fusion.cfg  patch-match.cfg
off_polyscope/: .polyscope.ini  CMakeLists.txt  build.bat  build.sh  imgui.ini  launch.bat  launch.sh  launch_test.bat
off_polyscope/src/: main.cpp  mesh.cpp  mesh.hpp  unitTests.cpp
off_polyscope/src/MeshParts/: MeshParts.h
off_polyscope/src/mesh_load/: mesh_load.cpp  mesh_load.h
off_polyscope/src/off_cleaning/: off_cleaning.cpp  off_cleaning.h
scripts/: colmap_bin.py  convert.py  output_metrics.py  process_videos.ipynb  renderBlender.py  render_normal_maps.py  sort_pictures.ipynb
